<resources>
    <string name="app_name">ROLap</string>
    <string name="login_title">Login</string>
    <string name="email">Email</string>
    <string name="hint_email">Masukkan email anda</string>
    <string name="password">Password</string>
    <string name="hint_password">Masukkan password anda</string>
    <string name="login">Login</string>
    <string name="ask_daftar">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="hint_nama">Masukkan nama anda</string>
    <string name="telepon">Telepon</string>
    <string name="hint_telepon">Masukkan nomor telepon anda</string>
    <string name="hint_konfirmasi_password">Konfirmasi password anda</string>
    <string name="ask_login">Sudah punya akun?</string>
    <string name="txt_konfirmasi_password">Konfirmasi Password</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="no_data_found">Data tidak ditemukan</string>
    <string name="terima_kasih">Terima kasih untuk pemesanan anda</string>
    <string name="informasi_pembayaran">Terima kasih untuk pemesanannya, tolong lakukan pembayaran pada rekening dibawah ini dengan total tertera.</string>
    <string name="total">Total</string>
    <string name="informasi_pembayaran2">BNI SYARIAH : 11111111111</string>
    <string name="informasi_pembayaran3">Lakukan pembayaran sebelum jam 11.59 malam dan lakukan konfirmasi pada admin setelah melakukan pembayaran.</string>
    <string name="pembayaran_title">Pembayaran</string>
    <string name="home">HOME</string>
    <string name="simpan">Simpan</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="hint_password_baru">Masukkan password baru anda</string>
    <string name="txt_password_baru">Password Baru</string>
    <string name="ubah_password_title">Ubah Password</string>
    <string name="txt_password_lama">Password Lama</string>
    <string name="hint_password_lama">Masukkan password lama anda</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="komentar">Ulasan</string>
    <string name="alamat">Alamat</string>
    <string name="logout">Logout</string>
    <string name="tutor">Tutor</string>
    <string name="msgWrong">Sepertinya ada yang salah</string>
    <string name="msgNoCennection">Tidak ada koneksi internet</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="TutorSaya">TutorSaya</string>
    <string name="TambahTutor">Tambah Tutor</string>
    <string name="spasaya">Spa Saya</string>
    <string name="TambahSpa">Tambah Spa</string>
    <string name="jadwalsaya">Jadwal Saya</string>
    <string name="spa">Spa</string>
    <string name="hint_alamat">Masukkan alamat anda</string>
    <string name="pilih_pembayaran">Pilih Metode Pembayaran</string>
    <string name="hint_tutor">Masukkan nama tutor</string>
    <string name="pilih_gambar">Pilih Gambar Dari</string>
    <string name="profile_pic_open_gallary_title">Choose a Picture from</string>
    <string name="hint_spa">Masukkan nama spa</string>
    <string name="hint_alamat_spa">Masukkan alamat spa anda</string>
    <string name="hint_harga_spa">Masukkan harga spa anda</string>
    <string name="hint_alamat_tutor">Masukkan alamat tutor anda</string>
    <string name="hint_harga_tutor">Masukkan harga tutor</string>
    <string name="slide_1_title">Tutor</string>
    <string name="slide_1_desc">Cari tutor yang cocok untuk anda dan mulai belajar dengan mudah.</string>
    <string name="slide_2_title">Spa</string>
    <string name="slide_2_desc">Cari spa dengan mudah dan jalani terapi dengan nyaman</string>
    <string name="slide_3_title">Pembayaran</string>
    <string name="slide_3_desc">Lakukan pembayaran dengan sekali klik</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="selesai">Selesai</string>
</resources>