<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteGrey">

    <ImageView
        android:id="@+id/ic_navigate_before"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:src="@drawable/ic_navigate_before"
        android:layout_marginStart="5dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/ubah_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ubah_password_title"
        android:fontFamily="sans-serif-black"
        android:textSize="40sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/ic_navigate_before"
        android:layout_marginStart="25dp" />

    <ImageView
        android:id="@+id/thumb_ubah_password"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/ubah_password_title"
        android:layout_marginTop="20dp"
        android:src="@drawable/image_lupa_password"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@+id/thumb_ubah_password">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/shape_rectangle_rounded_white"
            android:elevation="3dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/password_lama_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_password_lama"
                android:textSize="16sp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="25dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="3dp"
                android:layout_below="@id/password_lama_label"
                android:hint="@string/hint_password_lama"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/shape_rectangle_rounded_white"
            android:elevation="3dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/password_baru_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_password_baru"
                android:textSize="16sp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="25dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="3dp"
                android:layout_below="@id/password_baru_label"
                android:hint="@string/hint_password_baru"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/shape_rectangle_rounded_white"
            android:elevation="3dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/konfirmasi_password_baru_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/txt_konfirmasi_password"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="25dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="3dp"
                android:layout_below="@id/konfirmasi_password_baru_label"
                android:hint="@string/hint_konfirmasi_password"/>

        </RelativeLayout>

        <Button
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:elevation="3dp"
            android:text="@string/simpan"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:background="@drawable/shape_rectangle_rounded_blue"
            android:shadowColor="@color/colorWhiteGrey"
            />


    </LinearLayout>
</RelativeLayout>