<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@color/colorWhiteGrey">

    <ImageView
        android:id="@+id/ic_navigate_before"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:src="@drawable/ic_navigate_before"
        android:layout_marginStart="5dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:fontFamily="sans-serif-black"
        android:textSize="40sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/ic_navigate_before"
        android:layout_marginStart="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@+id/login_title">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:cardCornerRadius="27.5dp"
            app:cardElevation="4dp"
            android:layout_marginTop="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/email_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="16sp"
                    android:layout_alignParentTop="true"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textSize="18sp"
                    android:inputType="textEmailAddress"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="3dp"
                    android:layout_below="@id/email_label"
                    android:hint="@string/hint_email"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:cardCornerRadius="27.5dp"
            app:cardElevation="4dp"
            android:layout_marginTop="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/password_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="16sp"
                    android:layout_alignParentTop="true"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textSize="18sp"
                    android:inputType="textPassword"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="3dp"
                    android:layout_below="@id/password_label"
                    android:hint="@string/hint_password"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

<!--        <TextView-->
<!--            android:id="@+id/link_lupa_password"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/ask_forgot"-->
<!--            android:textSize="20sp"-->
<!--            android:gravity="right"-->
<!--            android:textColor="@color/colorBlack"-->
<!--            android:layout_marginTop="15dp"/>-->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:elevation="3dp"
            android:text="@string/login"
            android:clickable="true"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:background="@drawable/shape_rectangle_rounded_blue"
            android:shadowColor="@color/colorWhiteGrey"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">
            <TextView
                android:id="@+id/ask_daftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_daftar"
                android:textSize="20sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:id="@+id/link_daftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daftar"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorBlack"
                android:layout_toRightOf="@+id/ask_daftar"
                />
        </RelativeLayout>


    </LinearLayout>
<!--    <include layout="@layout/layout_progressbar" />-->
</RelativeLayout>