<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@color/colorWhiteGrey">

    <ImageView
        android:id="@+id/ic_navigate_before"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:src="@drawable/ic_navigate_before"
        android:layout_marginStart="5dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pembayaran_title"
        android:fontFamily="sans-serif-black"
        android:textSize="40sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/ic_navigate_before"
        android:layout_marginStart="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorWhite"
        android:elevation="2dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_bold"
                android:textSize="16sp"
                android:padding="5dp"
                android:text="@string/terima_kasih"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="@drawable/shape_rectangle_border_dash_black"
            android:layout_height="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:fontFamily="@font/segoe_ui"
                android:textSize="11sp"
                android:text="@string/informasi_pembayaran"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:textSize="12sp"
                    android:text="@string/total"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="5dp"
                    android:textSize="12sp"
                    android:text="Rp 100.000"
                    android:layout_marginLeft="5dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center_horizontal"
                android:fontFamily="@font/segoe_ui"
                android:textSize="11sp"
                android:text="@string/informasi_pembayaran2"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="@drawable/shape_rectangle_border_dash_black"
            android:layout_height="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRed"
                android:fontFamily="@font/segoe_ui"
                android:textSize="9sp"
                android:text="@string/informasi_pembayaran3"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:elevation="3dp"
        android:text="@string/home"
        android:clickable="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/shape_rectangle_rounded_blue"
        android:shadowColor="@color/colorWhiteGrey"
        />

    <!--    <include layout="@layout/layout_progressbar" />-->
</RelativeLayout>